# otus-cpp-template

./: CMakeLists.txt
.github/workflows/: release.yml  test.yml
include/: metainfo.h
src/: main.cpp  metainfo.cpp
tests/: gtest.cc  test_version.cpp
